--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,25 +1,12 @@
- worker_processes 1;
-
-user nobody nogroup;
-# 'user nobody nobody;' for systems with 'nobody' as a group instead
-error_log  /var/log/nginx/error.log warn;
-pid /var/run/nginx.pid;
-
 events {
-  worker_connections 1024; # increase if you have lots of clients
-  accept_mutex off; # set to 'on' if nginx worker_processes > 1
-  # 'use epoll;' to enable for Linux 2.6+
-  # 'use kqueue;' to enable for FreeBSD, OSX
+    worker_connections 1024;
 }
 
 http {
-  include mime.types;
-  # fallback in case we can't determine a type
-  default_type application/octet-stream;
-  access_log /var/log/nginx/access.log combined;
-  sendfile on;
+    include mime.types;
+    sendfile on;
 
-  upstream app_server {
+    upstream app_server {
     # fail_timeout=0 means we always retry an upstream even if it failed
     # to return a good HTTP response
 
@@ -28,50 +15,27 @@ http {
 
     # for a TCP configuration
     server backend:8000;
-  }
-
-  server{
-
-   listen 80;
-   server_name example.com;
-
-   rewrite ^(.*)$ https://$host$1  permanent;
-
-  }
-
-  server {
-    # use 'listen 80 deferred;' for Linux
-    # use 'listen 80 accept_filter=httpready;' for FreeBSD
-    listen 443 ssl;
-    server_name example.com;
-    ssl_certificate /cert/fullchain.pem;
-    ssl_certificate_key /cert/privkey.pem;
-    client_max_body_size 4G;
-
-    keepalive_timeout 5;
-
-    # path for static files
-    root /static;
-
-    location /api/ {
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_set_header Host $http_host;
-      # we don't want nginx trying to do something clever with
-      # redirects, we set the Host: header above already.
-      proxy_redirect off;
-      proxy_pass http://app_server/;
     }
 
-    location / {
-      # checks for static file, if not found proxy to app
-      try_files $uri /api/;
-    }
+    server {
+        listen 80;
 
+        autoindex off;
 
-    error_page 500 502 503 504 /500.html;
-    location = /500.html {
-      root /static;
-    }
-  }
+        server_name _;
+        server_tokens off;
+
+        root /static;
+        gzip_static on;
+
+        location /api/ {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $http_host;
+        # we don't want nginx trying to do something clever with
+        # redirects, we set the Host: header above already.
+        proxy_redirect off;
+        proxy_pass http://app_server/;
+        }
+    } 
 }
