--- a/.github/workflows/redeploy.yml
+++ b/.github/workflows/redeploy.yml
@@ -12,5 +12,5 @@ jobs:
     steps:
       - name: Deploy docker compose webhook
         uses: joelwmale/webhook-action@master
-        env:
-          WEBHOOK_URL: "http://groupwork.xiran.xyz:9000/hooks/75c04a03-a33a-4468-a44a-4f406cd5ca78"
+        with:
+          url: "http://groupwork.xiran.xyz:9000/hooks/75c04a03-a33a-4468-a44a-4f406cd5ca78"
