--- a/.github/workflows/redeploy.yml
+++ b/.github/workflows/redeploy.yml
@@ -13,4 +13,4 @@ jobs:
       - name: Deploy docker compose webhook
         uses: joelwmale/webhook-action@master
         with:
-          url: "http://groupwork.xiran.xyz:9000/hooks/75c04a03-a33a-4468-a44a-4f406cd5ca78"
+          url: "http://groupwork.rocknstone.top:9000/hooks/75c04a03-a33a-4468-a44a-4f406cd5ca78"
