Add cache for time consuming requests; prevent user from uploading the same exam data twice.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,13 @@ services:
       TZ: Asia/Shanghai
     ports:
       - "8080:80"
+  
+  redis:
+    image: redis
+    environment:
+      TZ: Asia/Shanghai
+    ports:
+      - "6379:6379"
 
 
 volumes:
